# tamper-detect

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-23-tamper-detection-layer-design.md
tamper_detect/: __init__.py  analyze.py  api.py  cli.py  loader.py  narrative.py  report.py  scorer.py  weights.yaml
tamper_detect/detectors/: __init__.py  ai_generation.py  base.py  ocr_render_diff.py  pdf_structural.py  pixel_forensics.py  template_match.py
testdata/: generate.py  labels.json  pdf_builders.py  tamper_ops.py
tests/integration/: test_corpus_eval.py
tests/unit/: test_analyze.py  test_api.py  test_corpus.py  test_detectors_base.py  test_experimental.py  test_loader.py  test_narrative.py  test_ocr_render_diff.py  test_pdf_structural.py  test_pixel_forensics.py  test_report.py  test_scorer.py
