[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamper-detect"
version = "0.1.0"
description = "Forensics / tamper-detection layer for KYC PDF documents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Sharan" }]

dependencies = [
    "pymupdf>=1.24.0",
    "pikepdf>=9.0.0",
    "reportlab>=4.2.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0",
    "scikit-image>=0.24.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "typer>=0.12.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
ai-detect = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[project.scripts]
tamper-detect = "tamper_detect.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tamper_detect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
